add details and change position

--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,9 @@
 } 
 
 .text4 {
-
+	text-align: center;
+    text-transform: uppercase;
+    color: #4CAF50;
 }
 
 .text5 {
@@ -78,11 +80,12 @@
 
 
 .lifestyle {
-	background-color: pink;
+	background-color: #DFC87D;
 	height: 100vh;
 	width 221vh;
 }
 .picture2 img {
+	border-radius: 15px 50px 30px;
 	height: 35%;
 	width: 30%;
 	padding-left: 10px;
@@ -90,12 +93,34 @@
 	opacity: .8;
 }
 
+.picture2 img {
+	width: 400px;
+    height: 200px;
+    position: relative;
+    -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
+    animation: mymove 5s infinite;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes mymove {
+    from {left: 0px;}
+    to {left: 600px;}
+}
+
+@keyframes mymove {
+    from {left: 0px;}
+    to {left: 600px;}
+}
+
+
 .text2 {
 	position: absolute;
 	font-family: 'Crafty Girls', cursive;
 	text-shadow: 2px 2px white;
 	border-style: solid;
+	padding: 6px;
     border-color: white;
+    letter-spacing: 3px;
 
 }
 
@@ -110,84 +135,23 @@
     color: white;
 } 
 
-.picture2 img {
-    width: 400px;
-    height: 200px;
-    position: relative;
-    -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
-    animation: mymove 5s infinite;
-}
 
-/* Safari 4.0 - 8.0 */
-@-webkit-keyframes mymove {
-    from {left: 0px;}
-    to {left: 600px;}
-}
 
-@keyframes mymove {
-    from {left: 0px;}
-    to {left: 600px;}
-}
-
-.friends img {
-	height: 45%;
-	width: 30%;
-	padding-top: 100px;
-	padding-left: 900px;
-}
 
 .verse img {
-	width: 30%;
-	padding-top: 120px;
+	border-radius: 15px 50px 30px;
+	height: 40%;
+	width: 28%;
+	padding-top: 126px;
 	padding-left: 900px;
-	background-color: pink;
-	opacity.5%;
+	opacity: .7;
 }
 
-.music {
-	background-color: #DFC87D;
-	height: 100vh;
-}
-
-.musicname {
-	padding-bottom: 180px;
-	padding-left: 150px;
-	position: absolute;
-    left: 15%;
-    transform: translate(-50%, -50%);
-    font-size: 79px;
-    font-family: Drybrush;
-    color: white;
-
-}
-
-
-.picture3 img {
-	height: 40vh;
-	width: 30%;
-	padding-left: 10px;
-	padding-top: 10px;
-	opacity: .8;
-}
-
-.picture3 img {
-    width: 400px;
-    height: 200px;
-    position: relative;
-    -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
-    animation: mymove 5s infinite;
-}
-
-/* Safari 4.0 - 8.0 */
-@-webkit-keyframes mymove {
-    from {left: 0px;}
-    to {left: 600px;}
-}
-
-@keyframes mymove {
-    from {left: 0px;}
-    to {left: 600px;}
-}
+border-radius: 15px 50px 30px;
+	width: 27%;
+	padding-top: 125px;
+	padding-left: 900px;
+	opacity .10%;
 
 .text3 {
 	position: absolute;
@@ -199,10 +163,11 @@
 }
 
 .picture1 img {
+	border-radius: 15px 50px 30px;
 	height: 40%;
 	width: 30%;
 	padding-left: 10px;
-	padding-top: 10px;
+	padding-top: 25px;
 	opacity: .7;
 }
 
@@ -226,7 +191,7 @@
 }
 
 .travel {
-	background-color: pink;
+	background-color: #DFC87D;
 	height: 100vh;
 }
 
@@ -246,11 +211,36 @@
 	font-family: 'Crafty Girls', cursive;
 	text-shadow: 2px 2px white;
 	border-style: solid;
+	padding: 6px;
 	border-color: white;
+	letter-spacing: 3px;
 
 }
 
 .travelname {
 	  font-family: Drybrush;
 	  display: flex;
+}
+
+.friends img {
+	border-radius: 15px 50px 30px;
+	height: 45%;
+	width: 30%;
+	padding-top: 126px;
+	padding-left: 900px;
+}
+
+.text6 {
+	position: absolute;
+	font-family: 'Crafty Girls', cursive;
+	text-shadow: 2px 2px white;
+	border-style: solid;
+	padding: 6px;
+	border-color: white;
+	letter-spacing: 3px;
+}
+
+.contact {
+	background-color: white;
+	height: 100vh;
 }
