--- a/style.scss
+++ b/style.scss
@@ -68,7 +68,7 @@
 .text5 {
 	text-align: center;
 	font-family: 'Crafty Girls', cursive;
-	text-shadow: 2px 2px white;
+	text-shadow: 2px 2px skyblue;
 	padding: 6px;
     letter-spacing: 3px;
 }
@@ -110,10 +110,11 @@
 .text2 {
 	position: absolute;
 	font-family: 'Crafty Girls', cursive;
-	text-shadow: 2px 2px white;
+	text-shadow: 2px 2px pink;
 	padding: 6px;
     letter-spacing: 3px;
     text-align: center;
+    font-size: 20PX;
 
 }
 
@@ -128,15 +129,12 @@
     color: white;
 } 
 
-
-
-
 .verse img {
 	border-radius: 15px 50px 30px;
 	height: 40%;
-	width: 28%;
-	padding-top: 126px;
-	padding-left: 900px;
+	width: 35%;
+	padding-top: 200px;
+	padding-left: 500px;
 	opacity: .7;
 }
 
@@ -184,7 +182,7 @@ border-radius: 15px 50px 30px;
 
 .travel {
 	background-color: pink;
-	height: 200vh;
+	height: 160vh;
 }
 
 .travelname {
@@ -215,10 +213,10 @@ border-radius: 15px 50px 30px;
 
 .friends img {
 	border-radius: 15px 50px 30px;
-	height: 45%;
+	height: 40%;
 	width: 40%;
-	padding-top: 126px;
-	padding-left: 400px;
+	padding-top: 144px;
+	padding-left: 500px;
 }
 
 .text6 {
@@ -230,25 +228,97 @@ border-radius: 15px 50px 30px;
 	letter-spacing: 3px;
 }
 
-.contact {
-	background-color: white;
-	height: 100vh;
-}
-
 .friend2 img {
 	border-radius: 15px 50px 30px;
 	width: 40%;
-	padding-left: 391px;
-	padding-top: 88px;
+	height:355px;
+	padding-left: 500px;
+	padding-top: 95px;
 	opacity: .7;
 }
 
-.contact {		
+.education {
 	background-color: skyblue;
 	height: 100vh;
 }
 
-.conbanner h1 {
-	color: #236863;
+.educname {
+	padding-bottom: 185px;
+	padding-left: 25px;
+	position: absolute;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    font-size: 79px;
+    font-family: Drybrush;
+    color: white;
+} 
 
+.jru img {
+	border-radius: 15px 50px 30px;
+	height: 400px;
+	width: 450px;
+	position: relative;
+	padding-top: 20px;
+	opacity: .6;
+}
+
+.jru img {
+	width: 400px;
+    height: 200px;
+    position: relative;
+    -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
+    animation: mymove 5s infinite;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes mymove {
+    from {left: 0px;}
+    to {left: 600px;}
+}
+
+@keyframes mymove {
+    from {left: 0px;}
+    to {left: 600px;}
+}
+
+.text7 {
+	position: absolute;
+	font-family: 'Crafty Girls', cursive;
+	text-shadow: 2px 2px white;
+	text-align: center;
+	padding: 6px;
+	letter-spacing: 3px;
+	font-size: 20px;
+}
+
+.contact {		
+	background-color: pink;
+	height: 100vh;
+}
+
+.conbanner h1 {
+	position: absolute;
+	padding-left: 80px;
+	font-size: 70px;
+	color: #236863;
+}
+
+.follow a {
+	padding-bottom: 20px;
+	text-decoration: none;
+	color: white;
+	font-size: 40px;
+	display: flex;
+	align-content: space-around;
+	font-family: 'Crafty Girls', cursive;
+}
+
+.follow ul {
+	padding-top: 215px;
+	padding-left: 100px;
+}
+
+a:hover {
+	background-color: skyblue;
+	letter-spacing:3px;
 }
